--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -9,43 +9,53 @@
 {% block mainblock %}
 <h1>Detail list of events</h1>
         {% with equipment=generalstudymoduleattr.generalequipmentmoduleattr_set.get %}
+        {% with thumbnail=generalstudymoduleattr.generalthumbnailmoduleattr_set.get %}
 
-<ul>
-    <li>
-        Accession number:
-        {% if not generalstudymoduleattr.accession_hashed %}
-            {{ generalstudymoduleattr.accession_number }}
-        {% else %}
-            <em>hidden</em>
-        {% endif %}
-    </li>
-    <li>Study date: {{ generalstudymoduleattr.study_date }}</li>
-    <li>Study time: {{ generalstudymoduleattr.study_time|date:"H:i" }}</li>
-    <li>Study description: {{ generalstudymoduleattr.study_description }}</li>
-    <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
-    <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
-  {% if showStandardNames %}
-    <li>Standard study names:
-        <ul>
-        {% for std_name in generalstudymoduleattr.standard_names.all %}
-            <li>{{ std_name.standard_name }}</li>
-        {% endfor %}
-        </ul>
-    </li>
-  {% endif %}
-    <li>Patient age: {{ generalstudymoduleattr.patientstudymoduleattr_set.get.patient_age_decimal|floatformat:1 }} years</li>
-    <li>Hospital: {{ equipment.institution_name }}</li>
-    <li>
-        Scanner:
-        {{ equipment.manufacturer }} |
-        {{ equipment.manufacturer_model_name }} |
-        {{ equipment.station_name }}
-    </li>
-    <li>Display name: {{ equipment.unique_equipment_name.display_name }}</li>
-    <li>Study UID: {{ generalstudymoduleattr.study_instance_uid }}</li>
-    <li>Operator(s): {{ generalstudymoduleattr.operator_name }}</li>
-    <li>Test patient indicators? {{ generalstudymoduleattr.patientmoduleattr_set.get.not_patient_indicator }}</li>
-</ul>
+<div class="row">
+  <div class="col-md-6">
+    <ul>
+      <li>
+          Accession number:
+          {% if not generalstudymoduleattr.accession_hashed %}
+              {{ generalstudymoduleattr.accession_number }}
+          {% else %}
+              <em>hidden</em>
+          {% endif %}
+      </li>
+      <li>Study date: {{ generalstudymoduleattr.study_date }}</li>
+      <li>Study time: {{ generalstudymoduleattr.study_time|date:"H:i" }}</li>
+      <li>Study description: {{ generalstudymoduleattr.study_description }}</li>
+      <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
+      <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
+      {% if showStandardNames %}
+        <li>Standard study names:
+            <ul>
+            {% for std_name in generalstudymoduleattr.standard_names.all %}
+                <li>{{ std_name.standard_name }}</li>
+            {% endfor %}
+            </ul>
+        </li>
+      {% endif %}
+      <li>Patient age: {{ generalstudymoduleattr.patientstudymoduleattr_set.get.patient_age_decimal|floatformat:1 }} years</li>
+      <li>Hospital: {{ equipment.institution_name }}</li>
+      <li>
+          Scanner:
+          {{ equipment.manufacturer }} |
+          {{ equipment.manufacturer_model_name }} |
+          {{ equipment.station_name }}
+      </li>
+      <li>Display name: {{ equipment.unique_equipment_name.display_name }}</li>
+      <li>Study UID: {{ generalstudymoduleattr.study_instance_uid }}</li>
+      <li>Operator(s): {{ generalstudymoduleattr.operator_name }}</li>
+      <li>Test patient indicators? {{ generalstudymoduleattr.patientmoduleattr_set.get.not_patient_indicator }}</li>
+    </ul>
+  </div>
+  <div class="col-md-6">
+    {% if thumbnail.thumbnail %}
+      <img src="/media/{{ thumbnail.thumbnail }}" style="max-height:256px;max-width:256px;height:auto;width:auto;"/>
+    {% endif %}
+  </div>
+</div>
 <div class="row">
   <div class="col-md-3">
     <table class="table table-condensed table-bordered small" aria-describedby="Total number of events and accumulated average glandular dose in the study">
@@ -155,6 +165,6 @@
     {% endfor %}
 </table>
 
-{% endwith %}
+{% endwith %}{% endwith %}
 
 {% endblock %}
