--- a/openrem/remapp/templates/remapp/ctdetail.html
+++ b/openrem/remapp/templates/remapp/ctdetail.html
@@ -80,6 +80,7 @@
     <th scope="col">Acquisition protocol</th>
 {% if showStandardNames %}
     <th scope="col">Standard acquisition name</th>
+    <th scope="col">CTDIvol Limit (mGy)</th>
 {% endif %}
     <th scope="col">Type</th>
     <th scope="col">CTDI<sub>vol</sub> (mGy)</th>
